<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.deking.jaxrs</groupId>
  <artifactId>javax-ws-rs-client-jdk11</artifactId>
  <version>0.0.1-SNAPSHOT</version>
<dependencies>
	<dependency>
	  <groupId>javax.ws.rs</groupId>
	  <artifactId>javax.ws.rs-api</artifactId>
	  <version>2.1.1</version>
	</dependency>
		<dependency>
		  <groupId>org.glassfish.jersey.core</groupId>
		  <artifactId>jersey-common</artifactId>
			<!--  <version>3.1.0</version>--> 
			<version>2.27</version>
		</dependency>
	<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>2.0.3</version>
		</dependency>
		<!-->
		<dependency>
		  <groupId>org.apache.cxf</groupId>
		  <artifactId>cxf-core</artifactId>
		  <version>3.5.4</version>  
		</dependency>
	<dependency>
	  <groupId>org.apache.cxf</groupId>
	  <artifactId>cxf-rt-rs-client</artifactId>
	  <version>3.5.4</version> 
	</dependency> 
	<dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-transports-http</artifactId>
             <version>3.5.4</version> 
        </dependency>
	<dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
           <version>3.5.4</version> 
        </dependency> --><dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
           <version>3.5.4</version> 
        </dependency> 
</dependencies>
<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerVersion>17</compilerVersion>
					<!-- <source>17</source>
						<target>17</target> -->
					<encoding>UTF-8</encoding>
					<fork>true</fork>
					<release>17</release>
					<compilerArgument>--enable-preview</compilerArgument>
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>